--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,10 @@ You can view the differences in tagged versions as follows:
   git log --pretty=format:"%Cblue%h %Cgreen%cn %Cred(%cr) %Creset%s %n%b %N" --graph "v0.3.2..v0.4.1"
 
 
+v0.6.3
+------
+ - Fix to allow takeoff sections to start at the beginning of the data.
+
 v0.6.2
 ------
  - Fix to flight number determination to ignore zero values.
