--- a/CHANGES
+++ b/CHANGES
@@ -8,8 +8,27 @@ You can view the differences in tagged versions as follows:
 
   git log --pretty=format:"%Cblue%h %Cgreen%cn %Cred(%cr) %Creset%s %n%b %N" --graph "v0.3.2..v0.4.1"
 
-v0.7.0
+v0.7.1
 ------
+ - Velocity Speed Parameters and KPV's reworked
+ - Improvements to detection of approaches starting below 3000ft
+ - Improvements to TaxiOut, TaxiIn and Taxiing, now only includes before and after Eng Starts and Stop
+ - Support for ERJ-170/175 & 190/195 Aircraft Families
+ - Support for G-IV Aircraft Families
+ - Support for Phemom 300 Aircraft Families
+ - Library change - slices_remove_small_gaps now handles slices with None start or stop entries.
+ - Library: added new function first_available_parameter()
+ - Library: update function first_valid_parameter()
+ - Added: AirspeedMinsToTouchdown
+ - Added: APU On During Flight Duration
+ - Added: DestinationAirport FlightAttributeNode
+ - Added: derive parameters and kpvs for aircraft who record torque in percent
+ - Added: check to Approach Range to check for valid glideslope data within the regression slice
+ - Fix: Compasses initialised either side of North lead to 180deg error
+ - Docs: Circular dependency updated
+ - Docs: Dependency tree docs update
+ - Docs: Autopilot documentation updated
+
 
 v0.6.5
 ------
